--- a/index.css
+++ b/index.css
@@ -537,29 +537,38 @@ body:not(.user-is-tabbing) a:focus {
 
 .about__content {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     align-items: center;
-}
-
-@media(max-width: 900px) {
-    .about__content {
-        flex-direction: column-reverse;
-        align-items: initial;
-    }
 }
 
 .about__photo-container {
     margin-bottom: var(--gutter-normal);
+    overflow: hidden;
 }
 
-@media(min-width: 901px) {
-    .about__text {
-        flex: 0 0 35%;
+.about__text {
+    flex: 0 0 500px;
+}
+
+@media(min-width: 900px) {
+    .about__content {
+        flex-direction: row-reverse;
     }
-    
+
     .about__photo-container {
         flex: 1;
         margin: 0 var(--gutter-huge) 0 0;
+        overflow: hidden;
+        position: relative;
+        width: 300px; /* Ajustado para um tamanho mais responsivo */
+        height: 300px; /* Ajustado para um tamanho mais responsivo */
+    }
+
+    .about__photo-container img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 50%;
     }
 }
 
